--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,62 @@
-.App {
-  text-align: center;
+* {
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
+    'Lucida Sans', Arial, sans-serif;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url('../images/img-2.jpg');
+  background-size: contain;
+  background-repeat: repeat-y;
+  background-size: 100%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.quote-container {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  text-align: center;
+  margin: 100px auto;
+  width: 40%;
+  height: 20%;
+  border: 2px solid black;
+  background-color: rgba(255, 255, 255, 0.5);
+  border-radius: 15px;
+  padding-top: 70px;
+  font-size: 24px;
+  box-shadow: 7px 7px 5px 0px;
 }
 
-.App-link {
-  color: #61dafb;
+.btn {
+  padding: 8px;
+  margin-top: 30px;
+  border: none;
+  outline: none;
+  text-decoration: none;
+  cursor: pointer;
+  font-size: 18px;
+  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.3);
+  margin-bottom: 10px;
+  border-radius: 5px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+.btn:hover {
+  background-color: white;
+  transform: scale(1.1);
+}
+
+.input {
+  border: none;
+  appearance: none;
+  padding: 8px;
+  border-radius: 5px;
+  margin-bottom: 20px;
+}
+
+@media only screen and (max-width: 600px) {
+  .quote-container {
+    width: 80%;
+    height: 30%;
   }
 }
